syntax = "proto3";

package testapp.v1;

option go_package = "github.com/polymerdao/monomer/gen/testapp/v1;testappv1";

message GetRequest {
    string key = 1;
}

message GetResponse {
    string value = 2;
}

service GetService {
    rpc Get(GetRequest) returns (GetResponse) {}
}
